--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.HubActivity"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".view.HubActivity" />
         <activity
             android:name=".view.ResourcesActivity"
             android:label="@string/title_activity_resources"
